# recommender-graph-db

./: .gitignore  README.md  dbt_project.yml  pyproject.toml
data/customer_1/core_setting_user.parquet/: part-00001-d8bed1ad-179c-41a4-ad44-3b0ef614b00f-c000.snappy.parquet  part-00003-d8bed1ad-179c-41a4-ad44-3b0ef614b00f-c000.snappy.parquet  part-00004-d8bed1ad-179c-41a4-ad44-3b0ef614b00f-c000.snappy.parquet  part-00005-d8bed1ad-179c-41a4-ad44-3b0ef614b00f-c000.snappy.parquet
data/customer_1/core_user.parquet/: part-00000-c2888115-e441-4589-aab7-0f550eb14c99-c000.snappy.parquet  part-00001-c2888115-e441-4589-aab7-0f550eb14c99-c000.snappy.parquet  part-00003-c2888115-e441-4589-aab7-0f550eb14c99-c000.snappy.parquet  part-00004-c2888115-e441-4589-aab7-0f550eb14c99-c000.snappy.parquet  part-00007-c2888115-e441-4589-aab7-0f550eb14c99-c000.snappy.parquet  (+1 more)
deployment/: main.tf
deployment/dev/: terraform.tfstate  terraform.tfstate.backup
macros/: does_table_exists.sql  recency_bigint.sql  recency_varchar.sql
models/: asset_content_history.sql  int_asset_content_history.sql  int_course_content_history.sql  models.yml  sources.yml  user_user_language.sql
models/staging/: asset_content_details.sql  asset_content_history.sql  asset_invitations.sql  asset_rating.sql  course_content_details.sql  course_content_history.sql  course_coursepath.sql  course_rating.sql  models.yml  sources.yml  user_user_details.sql  user_user_groups.sql  user_user_language.sql
queries/: load_data.cql
scripts/: etl_into_neo4j.py  extract_data_athena_db.py  populate_neo4j.py
(+338 files in other folders)
